--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -579,7 +579,7 @@ $nav-link-height:                    $navbar-height;
 $navbar-brand-height:                $navbar-height;
 $navbar-brand-padding-y:             0;
 
-$navbar-toggler-padding-y:           .25rem;
+$navbar-toggler-padding-y:           .47rem;
 $navbar-toggler-padding-x:           .88rem;
 $navbar-toggler-font-size:           $font-size-lg;
 $navbar-toggler-border-radius:       none;
